[package]
name = "hello-wasm"
version = "0.1.1"
authors = ["Alexander Gomez <algom@gobe.se>"]
edition = "2018"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://https://github.com/algome/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
